--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,10 @@
   "autoload": {
     "psr-4": {
       "Masterclass\\": "src/"
-    }
+    },
+    "files": [
+      "helpers.php"
+    ]
   },
   "require-dev": {
     "laravel/homestead": "^3.0"
